# hud-python

./: .gitignore  AGENTS.md  COMMANDS_USED.md  CONTRIBUTING.md  Dockerfile.local-browser  QUOTA_RESILIENCE.md  README.md  RETRY_IMPLEMENTATION.md  SheetBench-50 copy.json  SheetBench-50-docker.json  SheetBench-50-local.json  SheetBench-50.json  convert_to_docker.py  convert_to_local.py  create_local_provider.py  gcloud_sheetbench_setup.sh  inspect_turns.py  inspect_turns_tui.py  pyproject.toml  rl_config.json  setup_google_auth.py  setup_your_own_oauth.py  sheetbench_docker.json  sheetbench_tasks.json  task.jsonl  test.py  test_cdp.py  test_google_sheets_direct.py  test_vnc.py  ubuntu_gcloud_install_options.sh
.githooks/: pre-push
.github/workflows/: ci.yml  publish-hud-python.yml  release.yml  security.yml  slack-alerts.yml
.hud/: config.json
agents/: browser.yaml  coder.yaml  main.yaml  spreadsheet.yaml
cookbooks/a2a-chat/: README.md  chat_env.py  client.py  llm_client.py  pyproject.toml  server.py
cookbooks/codex-coding/: README.md  codex_agent.py  pyproject.toml
cookbooks/connect4-selfplay/: README.md  env.py  train.py  validate.py
cookbooks/fireworks-rl-training/: README.md  pyproject.toml  train.py
cookbooks/rl-training/: README.md  common.py  env.py  game2048_env.py  play_2048.py  ppo_custom_loss.py  pyproject.toml  simple_train.py  train_2048.py
cookbooks/tictactoe-selfplay/: env.py  train.py
docs/: AGENTS.md  changelog.mdx  concepts.mdx  custom.css  docs-restructure.md  docs.json  index.mdx  llm-quickstart.mdx  migrate-v6.mdx  migration.mdx  quickstart.mdx  skill.md
docs/advanced/: harbor-convert.mdx  patterns.mdx  testing-environments.mdx
docs/beta/: index.mdx  rft.mdx
docs/build-environments/: index.mdx  remote-builds.mdx  spec.mdx
docs/building/: environments-as-data.mdx  running-at-scale.mdx  scaffolding.mdx  tasks-and-evaluation.mdx
docs/cookbooks/: codex-coding.mdx  multi-agent.mdx  ops-diagnostics.mdx
docs/core-concepts/: architecture.mdx  mcp-protocol.mdx  task-system.mdx  (+1 more)
environments/deep_research/: Dockerfile  README.md  pyproject.toml
environments/deep_research/src/hud_controller/: __init__.py  server.py
environments/deep_research/src/hud_controller/evaluate/: __init__.py  page_contains.py  url_match.py  wikipedia_research.py
environments/deep_research/src/hud_controller/problems/: __init__.py  search_interaction.py
environments/deep_research/src/hud_controller/setup/: __init__.py  navigate.py
environments/deep_research/src/hud_controller/tools/: __init__.py  executor.py  playwright.py
environments/from_mcp_template/: Dockerfile  pyproject.toml  tasks.json
environments/from_mcp_template/controller/: __init__.py  tools.py
environments/jupyter/environment/: pyproject.toml  server.py
environments/mcp-multitools/environment/: __init__.py  pyproject.toml  server.py
environments/minetest/: Dockerfile  README.md  pyproject.toml
environments/minetest/src/hud_controller/: context.py  server.py
environments/minetest/src/hud_controller/evaluate/: __init__.py  health.py
environments/minetest/src/hud_controller/setup/: __init__.py  game.py
environments/pdfbench/: Dockerfile  Dockerfile.standalone  README.md  convert_harbor_tasks.py  pyproject.toml  run_eval.sh  tasks.json  tasks_sample.json
environments/pdfbench/src/hud_pdfbench/: __init__.py  context.py  server.py  tools.py
environments/pdfbench/src/hud_pdfbench/evaluate/: __init__.py  verify_fields.py
environments/pdfbench/src/hud_pdfbench/setup/: __init__.py  load_pdf.py
environments/pdfbench_cu/: Dockerfile  pyproject.toml  run_eval.py  run_test.py  tasks_sample.json  test_screenshot.py
environments/pdfbench_cu/src/hud_pdfbench_cu/: __init__.py  browser.py  executor.py  server.py
environments/pdfbench_cu/src/hud_pdfbench_cu/evaluate/: __init__.py  verify_fields.py
environments/pdfbench_cu/src/hud_pdfbench_cu/setup/: __init__.py  load_pdf.py
environments/tau2/: Dockerfile  hud.lock.yaml  pyproject.toml  test_airline_task.json  test_retail_task.json  test_telecom_task.json
environments/tau2/server/: main.py
environments/tau2/server/evaluate/: __init__.py  eval.py
environments/tau2/server/setup/: __init__.py  load.py
environments/tau2/server/tools/: __init__.py  _wrapper.py  conversation.py
environments/tau2/task/: __init__.py  _system_prompt.py  task.py
examples/: 00_agent_env.py  01_agent_lifecycle.py  01_codex_coding_agent.py  02_agent_lifecycle.py  02_chat_env.py  02_claude_agent.py  02_opencode_agent.py  03_a2a_chat_server.py  03_a2a_environment_orchestrator.py  03_browser_agent_loop.py  03_openai_compatible_agent.py  03_scenario_chat.py  04_a2a_chat_llm_client.py  04_a2a_hud_native_client.py  04_a2a_python_sdk_client.py  04_grounded_agent.py  04_scenario_server.py  05_a2a_python_sdk_client.py  05_a2a_simple_client.py  05_custom_agent.py  05_file_analyzer_agent.py  05_scenario_client.py  06_a2a_fanout_hello.py  06_codex_coding_agent.py  06_mcp_server.py  06_ollama_local.py  06_tinker_agent.py  07_multi_agent.py  07_opencode_agent.py  08_claude_agent_sdk.py  README.md  claude_agent.py  gemini_agent.py  grounded_agent.py  grounded_evaluation.ipynb  integration_mcp_use.py  integration_otel.py  openai_2048.py  openai_compatible_agent.py  osworld_grounded_evaluation.ipynb  (+1 more)
hud/: __init__.py  _entry.py  _legacy.py  _platform.py  _runtime.py  _wire.py  agent_server.py  conftest.py  datasets.py  graders.py  harbor.py  sandbox.py  scenario_chat.py  server.py  settings.py  skills.py  taskset.py  training.py  types.py  version.py
hud-python/: README.md  pyproject.toml  setup.py
inspect-ai-env/: Dockerfile  README.md  docker_pyproject.toml  download-eval.sh  entrypoint.sh  inspect_loader.py  list_all_evals.py  prepare_dataset.py  pyproject.toml  run_task.py  tasks.json  test_all_evals.py  test_env.ipynb
integrations/: __init__.py  harbor.py  harbor_common.py  harbor_runtime.py
rl/: README.md  pyproject.toml  train_grpo_cua.py
scripts/: check_shim_lockstep.py  pre_release_check.py  v5_compat_report.py
shim/: README.md  pyproject.toml
(+1231 files in other folders)
