[project]
name = "hud-python"
version = "0.6.9"
description = "The HUD SDK was renamed to 'hud'. This package just installs it."
readme = "README.md"
requires-python = ">=3.11, <3.13"
authors = [
{ name = "HUD", email = "founders@hud.ai" },
]
license = { text = "MIT" }
dependencies = [
    "hud>=0.6.9,<0.7",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/hud-evals/hud-python"
"Bug Tracker" = "https://github.com/hud-evals/hud-python/issues"
"Documentation" = "https://docs.hud.ai"

# Entry points reference modules provided by the 'hud' dependency, so
# `uv tool install hud-python` / `uv tool upgrade hud-python` keep producing
# working executables after the rename. They route through hud._entry, which
# survives a pip in-place upgrade across the rename and reports the recovery
# command instead of a bare ModuleNotFoundError.
[project.scripts]
hud = "hud._entry:main"
hud-python = "hud._entry:main"

# Pass-through extras so `pip install 'hud-python[robot]'` etc. keep resolving.
[project.optional-dependencies]
agents = ["hud[agents]"]
agent = ["hud[agent]"]
bedrock = ["hud[bedrock]"]
browseruse = ["hud[browseruse]"]
daytona = ["hud[daytona]"]
dev = ["hud[dev]"]
modal = ["hud[modal]"]
robot = ["hud[robot]"]
train = ["hud[train]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Metapackage: no files of its own, everything comes from the 'hud' dependency.
[tool.hatch.build.targets.wheel]
bypass-selection = true
