[project]
name = "fireworks-rl-training"
version = "0.1.0"
description = "Direct Fireworks Training API RL loop over HUD-style arithmetic tasks"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fireworks-ai[training]",
    "hud",
    "matplotlib",
    "python-dotenv",
    "torch>=2",
    "transformers>=4.55",
]

[tool.uv]
package = false

[tool.uv.sources]
hud = { path = "../..", editable = true }
