[project]
name = "hud-deep-research"
version = "0.1.0"
description = "HUD Deep Research environment focused on reading Wikipedia via Playwright"
requires-python = ">=3.11,<3.13"
dependencies = [
    "hud-python",
    "playwright",
]

[project.scripts]
hud-deep-research = "hud_controller.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hud_controller"]

[tool.hatch.metadata]
allow-direct-references = true

