[project]
name = "hud-minetest"
version = "0.1.0"
description = "HUD MCP environment wrapping Minetest (open-source Minecraft-like) with computer control"
requires-python = ">=3.11,<3.14"
dependencies = [
    "hud-python",
    "pyautogui",
    "typer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hud]
image = "hud-minetest:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hud_controller"]

