[project]
name = "hud-pdfbench-cu"
version = "0.1.0"
description = "PDF form filling environment with computer use (Playwright)"
requires-python = ">=3.11"
dependencies = [
    "hud-python",
    "pymupdf>=1.25.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.20"]

[tool.hud]
image = "hud-pdfbench-cu:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hud_pdfbench_cu"]
