[project]
name = "hud-tau2-bench"
version = "0.1.0"
description = "HUD Environment for tau2-bench"
requires-python = ">=3.11"
dependencies = [
    "hud-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server", "task"]
