[project]
name = "jupyter-environment"
version = "0.1.0"
description = "Backend environment for XLSX manipulation"
authors = [{name = "HUD Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "jupyter-client>=8.0.0",
    "ipython>=8.0.0",
    "nbformat>=5.7.0",
    "aiofiles>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]