[project]
name = "mcp-multitools-environment"
version = "0.1.0"
description = "Backend service for MCP Multi-Tools environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.24.0",
    "supabase>=2.0.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["environment"]

